Fixes overlay z-index.

--- a/sass/_works.scss
+++ b/sass/_works.scss
@@ -17,6 +17,11 @@
 			background: rgba($color: #000000, $alpha: 0.3);
 		}
 
+		.title,
+		.subtitle {
+			z-index: 2;
+		}
+
 		.subtitle {
 			font-size: 3rem;
 		}
